src/test/resources/invalid/06_list-without-value.fmx
<fmx:list>
  <main second="bibo" attr1="dodo" third="cecil">
  </main>
</fmx:list>